Fix error on Firefox which Toolbar missing when rerender

--- a/packages/veb-ui/scss/components/_toolbar.scss
+++ b/packages/veb-ui/scss/components/_toolbar.scss
@@ -20,6 +20,8 @@ $var: ".veb-toolbar";
     
 
     &.fixed {
+        top: 0; 
+        left: 0;
         position: fixed;
         z-index: 100;
     }
